<resources>
    <string name="app_name">Text Layout Tools</string>
    <string name="contact_email_title">Связаться с разработчиком</string>
    <string name="action_settings">Настройки</string>
    <string name="action_statistics">Статистика</string>
    <string name="action_about">О программе</string>
    <string name="descr_accessibility_service">Разрешение требуется для отслеживания нажатия комбинации клавиш и замены текста. Введенный текст не сохраняется и не передается сторонним сервисам.</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="main_app_name_version" translatable="false">Text Layout Tools 1.19</string>
    <string name="main_description">Приложение для смены раскладки текста.</string>
    <string name="main_examples">- Автоматическая смена\n- Ctrl+Q - смена раскладки\n- Alt+Enter - смена раскладки со сменой языка\nИз-за ограничений Android невозможно программно сменить язык ввода для новых слов</string>
    <string name="main_service_description">Для работы приложения необходимо включить поддержку в меню настроек Специальные Возможности</string>
    <string name="main_button_accessibility">Открыть Специальные Возможности</string>
    <string name="main_edittext_placeholder">Попробовать в работе</string>
    <string name="main_service_not_running_alert">Сервис не запущен</string>
    <string name="title_activity_about">О программе</string>
    <string name="pref_h2_application_theme">Внешний вид</string>
    <string name="setting_application_theme" translatable="false">Setting_Application_Theme</string>
    <string name="pref_title_application_theme">Тема (необходим перезапуск)</string>
    <string name="pref_h2_application_updates">Обновления</string>
    <string name="pref_title_application_updates_check">Проверять на наличие обновлений</string>
    <string name="setting_application_updates_check" translatable="false">Setting_Application_Updates_Check</string>
    <string name="pref_description_application_updates_check">Проверить вручную можно на экране \'О программе\'</string>
    <string name="pref_header_languages">Язык Ввода</string>
    <string name="pref_h2_input_type">Ввод</string>
    <string name="setting_input_method" translatable="false">Setting_Input_Method</string>
    <string name="pref_title_input_method">Метод ввода</string>
    <string name="pref_title_keyboard_input_settings">Открыть Настройки Ввода</string>
    <string name="pref_header_shortcut">Быстрая Клавиша</string>
    <string name="pref_h2_shortcut">Комбинация Клавиш</string>
    <string name="pref_h2_text_selection">Выделение</string>
    <string name="setting_shortcut_enabled_key" translatable="false">Setting_Enabled</string>
    <string name="setting_is_replace_alt_enter" translatable="false">Setting_Replace_Alt_Enter</string>
    <string name="setting_control_key" translatable="false">Setting_Control</string>
    <string name="setting_shortcut_key" translatable="false">Setting_Shortcut</string>
    <string name="setting_select_replaced" translatable="false">Setting_Select_Replaced</string>
    <string name="pref_description_shortcut_enabled">Смена раскладки при нажатии Ctrl+&lt;key&gt;</string>
    <string name="pref_title_shortcut_enabled">Переключение по комбинации клавиш</string>
    <string name="pref_description_is_replace_alt_enter">Смена раскладки при нажатии Alt+Enter (со сменой яыка)</string>
    <string name="pref_title_is_replace_alt_enter">Переключение по Alt+Enter</string>
    <string name="pref_title_control_key">Клавиша Ctrl</string>
    <string name="pref_title_shortcut">Быстрая Клавиша</string>
    <string name="pref_title_system_accessibility_settings">Открыть Специальные Возможности</string>
    <string name="pref_title_select_replaced">Выделять заменённый текст</string>
    <string name="pref_description_select_replaced">Выделять заменённый текст в поле ввода после смены раскладки</string>
    <string name="pref_header_corrections">Слова-Исключения</string>
    <string name="pref_h2_autocorrect">Автоматическое Исправление</string>
    <string name="setting_is_auto_correct" translatable="false">Setting_Auto_Correct</string>
    <string name="pref_description_is_auto_correct">Автоматически исправлять раскладку последнего введённого слова</string>
    <string name="pref_title_is_auto_correct">Автоматически исправлять раскладку</string>
    <string name="setting_user_dictionary" translatable="false">Setting_User_Dictionary</string>
    <string name="pref_description_user_dictionary">Одно слово на строке</string>
    <string name="pref_title_user_dictionary">Пользовательский словарь</string>
    <string name="pref_user_dictionary_default_value">Привет\nМир</string>
    <string name="setting_autocorrect_direction" translatable="false">Setting_Autocorrect_Direction</string>
    <string name="pref_title_autocorrect_direction">Разрешить автоисправление</string>
    <string name="pref_h2_sound">Звук</string>
    <string name="pref_h2_vibration">Вибрация</string>
    <string name="setting_vibration_intensity" translatable="false">Setting_Vibration_Intensity</string>
    <string name="pref_description_vibration_intensity">Минимум - отключена</string>
    <string name="pref_title_vibration_intensity">Интенсивность вибрации</string>
    <string name="setting_vibration_pattern_rus" translatable="false">Setting_Vibration_Pattern_Rus</string>
    <string name="pref_title_vibration_pattern_rus">Переключение на русский</string>
    <string name="setting_vibration_pattern_eng" translatable="false">Setting_Vibration_Pattern_Eng</string>
    <string name="pref_title_vibration_pattern_eng">Переключение на английский</string>
    <string name="setting_sound_input_rus" translatable="false">Setting_Sound_Input_Rus</string>
    <string name="pref_title_sound_input_rus">Смена языка ввода на русский</string>
    <string name="setting_sound_input_eng" translatable="false">Setting_Sound_Input_Eng</string>
    <string name="pref_title_sound_input_eng">Смена языка ввода на английский</string>
    <string name="setting_sound_correct_rus" translatable="false">Setting_Sound_Correct_Rus</string>
    <string name="pref_title_sound_correct_rus">Исправление на русский</string>
    <string name="setting_sound_correct_eng" translatable="false">Setting_Sound_Correct_Eng</string>
    <string name="pref_title_sound_correct_eng">Исправление на английский</string>
    <string name="pref_header_additional">Дополнительные</string>
    <string name="pref_h2_double_letters">Двойные Буквы</string>
    <string name="pref_h2_statusbar_icon">Индикатор Раскладки в Трее</string>
    <string name="setting_is_correct_double_letters" translatable="false">Setting_Correct_Doubled</string>
    <string name="pref_description_is_correct_double_letters">Заменять двойные буквы на альтернативные (дд > ж)</string>
    <string name="pref_title_is_correct_double_letters">Исправлять двойные нажатия</string>
    <string name="setting_is_show_icon" translatable="false">Setting_Show_Icon</string>
    <string name="pref_description_is_show_icon">Показывать иконку-флаг в строке уведомлений (после следующей смены языка)</string>
    <string name="pref_title_is_show_icon">Показывать иконку</string>
    <string name="setting_icon_style_ru" translatable="false">Setting_Icon_Style_Ru</string>
    <string name="pref_title_icon_style_ru">Стиль иконки (Русский)</string>
    <string name="setting_icon_style_en" translatable="false">Setting_Icon_Style_En</string>
    <string name="pref_title_icon_style_en">Стиль иконки (Английский)</string>
    <string name="pref_h2_floating_icon">Плавающий Индикатор</string>
    <string name="setting_is_show_floating_icon" translatable="false">Setting_Show_Floating_Icon</string>
    <string name="pref_title_is_show_floating_icon">Показывать иконку</string>
    <string name="pref_description_is_show_floating_icon">Показывать иконку-флаг на экране (Требуется разрешение на отображение поверх других приложений):</string>
    <string name="pref_title_overlay_settings">Открыть Настройки Отображения</string>
    <string name="pref_title_notification_settings">Открыть Настройки Уведомлений</string>
    <string name="setting_floating_icon_style_ru" translatable="false">Setting_FloatingIcon_Style_Ru</string>
    <string name="setting_floating_icon_style_en" translatable="false">Setting_FloatingIcon_Style_En</string>
    <string name="setting_floating_icon_text_ru" translatable="false">Setting_FloatingIcon_Text_Ru</string>
    <string name="pref_title_floating_icon_text_ru">Текст для русского языка</string>
    <string name="setting_floating_icon_text_en" translatable="false">Setting_FloatingIcon_Text_En</string>
    <string name="pref_title_floating_icon_text_en">Текст для английского языка</string>
    <string name="setting_floating_icon_text_color" translatable="false">Setting_FloatingIcon_TextColor</string>
    <string name="pref_title_floating_icon_text_color">Цвет текста</string>
    <string name="setting_floating_icon_background_color" translatable="false">Setting_FloatingIcon_BackgroundColor</string>
    <string name="pref_title_floating_icon_background_color">Цвет заливки</string>
    <string name="setting_floating_icon_flag_size" translatable="false">Setting_FloatingIcon_Flag_Size</string>
    <string name="pref_title_floating_icon_flag_size">Размер индикатора</string>
    <string name="setting_floating_icon_opacity" translatable="false">Setting_FloatingIcon_Opacity</string>
    <string name="pref_title_floating_icon_opacity">Прозрачность</string>
    <string name="pref_h2_ctrl_emulation">Эмуляция Ctrl</string>
    <string name="pref_h2_logging">Логирование</string>
    <string name="pref_h2_language_detection">Определение языка</string>
    <string name="setting_is_show_info" translatable="false">Setting_Show_Info</string>
    <string name="pref_description_is_show_info">Показывать информацию о нажатой клавише</string>
    <string name="pref_title_is_show_info">Показывать информацию</string>
    <string name="setting_key2emulation_enabled" translatable="false">Setting_Key2Emulation_Enabled</string>
    <string name="pref_description_key2emulation_enabled">Включить эмуляцию действий Ctrl+A/C/V/X на выбранной клавише Ctrl</string>
    <string name="pref_title_key2emulation_enabled">Включить эмуляцию Ctrl (Только для Key2)</string>
    <string name="setting_check_text_for_language" translatable="false">Setting_Check_Text_For_Language</string>
    <string name="pref_description_check_text_for_language">Язык будет определяться по введённому тексту. Могут быть задержки и зависания!</string>
    <string name="pref_title_check_text_for_language">Определять язык по тексту</string>
    <string name="setting_is_log_to_sd" translatable="false">Setting_Auto_Log_To_SD</string>
    <string name="pref_description_is_log_to_sd">Записывать логи событий в файл \'TextLayoutTools\\tlt_log.txt\' во внутренней памяти. Необхожимо предоставить разрешение на запись в Память и USB.\nВНИМАНИЕ! В файле будет содержаться введённый текст.</string>
    <string name="pref_title_is_log_to_sd">Записывать логи событий в файл</string>
    <string name="setting_open_app_settings">Открыть настройки приложения</string>
    <string name="pref_h2_save_settings_to_file">Сохранение настроек</string>
    <string name="pref_description_storage_permissions">Необходимо разрешение на запись в память устройства:</string>
    <string name="setting_save_settings_to_file" translatable="false">Setting_Save_To_File</string>
    <string name="pref_title_save_settings_to_file">Сохранить настройки в файл</string>
    <string name="setting_restore_settings_from_file" translatable="false">Setting_Restore_From_File</string>
    <string name="pref_title_restore_settings_from_file">Восстановить настройки из файла</string>
    <string name="text_menu_action_search">Поиск</string>
    <string name="text_menu_action_sorttitle">По названию</string>
    <string name="text_menu_action_help">Помощь</string>
</resources>