<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_h2_double_letters">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/setting_is_correct_double_letters"
            android:summary="@string/pref_description_is_correct_double_letters"
            android:title="@string/pref_title_is_correct_double_letters" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_h2_statusbar_icon">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/setting_is_show_icon"
            android:summary="@string/pref_description_is_show_icon"
            android:title="@string/pref_title_is_show_icon" />

        <ListPreference
            android:defaultValue="Flag"
            android:entries="@array/pref_icon_style_key_titles"
            android:entryValues="@array/pref_icon_style_key_values"
            android:key="@string/setting_icon_style_ru"
            android:dependency="@string/setting_is_show_icon"
            android:title="@string/pref_title_icon_style_ru" />

        <ListPreference
            android:defaultValue="Flag"
            android:entries="@array/pref_icon_style_key_titles"
            android:entryValues="@array/pref_icon_style_key_values"
            android:key="@string/setting_icon_style_en"
            android:dependency="@string/setting_is_show_icon"
            android:title="@string/pref_title_icon_style_en" />
    </PreferenceCategory>

</PreferenceScreen>
