<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_h2_floating_icon">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/setting_is_show_floating_icon"
            android:summary="@string/pref_description_is_show_floating_icon"
            android:title="@string/pref_title_is_show_floating_icon" />

        <Preference android:title="@string/pref_title_overlay_settings" android:icon="@drawable/ic_chevron_right_black_24dp">
            <intent android:action="android.settings.action.MANAGE_OVERLAY_PERMISSION"
                android:data="package:by.mkr.blackberry.textlayouttools" />
        </Preference>

        <Preference android:title="@string/pref_title_notification_settings" android:icon="@drawable/ic_chevron_right_black_24dp">
            <intent android:action="android.settings.APP_NOTIFICATION_SETTINGS" >
                <extra android:name="android.provider.extra.APP_PACKAGE" android:value="android" />
            </intent>
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="LAYOUT">
        <SeekBarPreference
            android:defaultValue="2"
            android:min="0"
            android:max="2"
            android:key="@string/setting_floating_icon_gravity_horiz"
            android:dependency="@string/setting_is_show_floating_icon"
            android:title="@string/pref_title_floating_icon_gravity_horiz"/>

        <ListPreference
            android:defaultValue="Bottom"
            android:entries="@array/pref_floating_icon_gravity_vert_key_titles"
            android:entryValues="@array/pref_floating_icon_gravity_vert_key_values"
            android:key="@string/setting_floating_icon_gravity_vert"
            android:dependency="@string/setting_is_show_floating_icon"
            android:title="@string/pref_title_floating_icon_gravity_vert" />
    </PreferenceCategory>

    <PreferenceCategory android:title="ICON STYLE">
        <ListPreference
            android:defaultValue="Flag"
            android:entries="@array/pref_floating_icon_style_key_titles"
            android:entryValues="@array/pref_floating_icon_style_key_values"
            android:key="@string/setting_floating_icon_style_ru"
            android:dependency="@string/setting_is_show_floating_icon"
            android:title="@string/pref_title_icon_style_ru" />

        <ListPreference
            android:defaultValue="Flag"
            android:entries="@array/pref_floating_icon_style_key_titles"
            android:entryValues="@array/pref_floating_icon_style_key_values"
            android:key="@string/setting_floating_icon_style_en"
            android:dependency="@string/setting_is_show_floating_icon"
            android:title="@string/pref_title_icon_style_en" />
    </PreferenceCategory>

    <PreferenceCategory android:title="FLAG SETTINGS">
        <SeekBarPreference
            android:defaultValue="40"
            android:min="0"
            android:max="70"
            android:key="@string/setting_floating_icon_flag_size"
            android:dependency="@string/setting_is_show_floating_icon"
            android:title="@string/pref_title_floating_icon_flag_size"/>

        <SeekBarPreference
            android:defaultValue="20"
            android:min="0"
            android:max="100"
            android:key="@string/setting_floating_icon_opacity"
            android:dependency="@string/setting_is_show_floating_icon"
            android:title="@string/pref_title_floating_icon_opacity"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="TEXT SETTINGS">
        <EditTextPreference
            android:defaultValue="RUS"
            android:key="@string/setting_floating_icon_text_ru"
            android:dependency="@string/setting_is_show_floating_icon"
            android:title="@string/pref_title_floating_icon_text_ru" />

        <EditTextPreference
            android:defaultValue="ENG"
            android:key="@string/setting_floating_icon_text_en"
            android:dependency="@string/setting_is_show_floating_icon"
            android:title="@string/pref_title_floating_icon_text_en" />

        <SeekBarPreference
            android:defaultValue="2"
            android:min="0"
            android:max="14"
            android:key="@string/setting_floating_icon_text_size"
            android:dependency="@string/setting_is_show_floating_icon"
            android:title="@string/pref_title_floating_icon_text_size"/>

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="@string/setting_floating_icon_text_color"
            android:defaultValue="0xFF222222"
            app:supportsAlpha="true"
            android:dependency="@string/setting_is_show_floating_icon"
            android:title="@string/pref_title_floating_icon_text_color" />

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="@string/setting_floating_icon_background_color"
            android:defaultValue="0x88FFFFFF"
            app:supportsAlpha="true"
            android:dependency="@string/setting_is_show_floating_icon"
            android:title="@string/pref_title_floating_icon_background_color" />
    </PreferenceCategory>

</PreferenceScreen>
